--- a/pom.xml
+++ b/pom.xml
@@ -13,5 +13,11 @@
 			<artifactId>json</artifactId>
 			<version>20240303</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-dynamodb -->
+		<dependency>
+    		<groupId>com.amazonaws</groupId>
+    		<artifactId>aws-java-sdk-dynamodb</artifactId>
+    		<version>1.12.500</version>
+		</dependency>
 	</dependencies>
 </project>
